--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
+    "reactjs-popup": "^2.0.4",
     "semantic-ui-react": "^2.0.3",
     "yarn": "^1.22.10"
   },
