--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.3",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
