--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^16.8.6",
+    "react-awesome-button": "^6.5.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-date-picker": "^5.1.0",
